fix: reports distorted UI updates (#412)
* chore: bump dhis2 dependencies

* chore: remove react, react-dom and deduplicate dependencies

* chore: run d2 migrate script

* chore: update test dependencies

* chore: format all files

* fix(app-platform): upgrade platform tools to use vite and react 18

* fix: styled-jsx to fix styles

* fix: jsx extensions for styled jsx files

* test: polyfill TextEncoder; update snapshot

* fix: polyfill `global` to fix Material UI

* feat: add styles for various components and pages

- Introduced new CSS modules for components including AvailableOrganisationUnitsTree, DataSetDimensions, FormDialog, MenuElement, OrgUnitsTreeWithExtraOptions, and more.
- Added global styles for body, html, and various UI elements to enhance the overall layout and design.
- Implemented specific styles for forms, buttons, loaders, and report tables to improve user experience and visual consistency.
- Created dedicated styles for error messages and loading indicators across different components.
- Ensured responsive design principles are applied to maintain usability across devices.

* feat: add React imports and styles to various components; remove unused FormDialog styles

* feat: simplified the mapping of persistedReportTableName

* feat: update ESLint configuration, enhance Jest setup with global polyfills, and add mock for undici

* fix: ensure global polyfills are only set if not already defined and improve error logging for ReadableStream

* feat: update jest setup

* fix: update dependency version

* chore: update test

* chore: add app shell

* chore: add app shell

* chore: update cli scripts

* chore: update lock files

* chore: update d2 config

* chore: delete patch folder

* feat: cleanup

* chore: run yarn format

* chore: cleanup

* chore: cleanup

* chore: cleanup

---------

--- a/src/global.css
+++ b/src/global.css
@@ -76,3 +76,62 @@ input {
 .actions .d2-ui-button:first-child {
     margin-right: 16px;
 }
+
+#main-action-button {
+    margin-right: 16px;
+    background-color: rgb(0, 75, 160);
+    text-transform: uppercase;
+    color: white;
+    padding: 15px 30px;
+    font-weight: 500;
+    border: none;
+    border-radius: 2px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+#main-action-button:disabled {
+    background-color: rgb(229, 229, 229);
+    cursor: not-allowed;
+    text-transform: uppercase;
+    color: rgba(16, 16, 16, 0.3);
+}
+#back-button {
+    border: none;
+    background-color: transparent;
+}
+#secondary-action-button {
+    background-color: rgb(255, 152, 0);
+    margin-right: 16px;
+    text-transform: uppercase;
+    color: white;
+    padding: 15px 30px;
+    font-weight: 500;
+    border: none;
+    border-radius: 2px;
+    cursor: pointer;
+    font-size: 16px;
+}
+#secondary-action-button:disabled {
+    background-color: rgb(229, 229, 229);
+    cursor: not-allowed;
+    text-transform: uppercase;
+    color: rgba(16, 16, 16, 0.3);
+}
+#cancel-button {
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
+    color: black;
+    text-transform: uppercase;
+    padding: 15px 30px;
+    border: none;
+    border-radius: 2px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 500;
+}
+#extra-options-action {
+    border: none;
+    background-color: transparent;
+    margin-bottom: 10px;
+}
